# SynEvaRec

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
data/: explorative_analysis_data.csv
data/restaurant_data_reformatted/: heu_matrix_out.csv  nn_matrix_out.csv  ratings_out.csv  restaurants.csv  source.csv  users.csv
datasets/: download.py
modules/: deepfm.py  evaluator.py  loaders.py  models.py  setup.py  trainers.py  utils.py
modules/modules/: deepfm.py  models.py  trainers.py  utils.py
notebooks/: books_main.ipynb  deepfm_test.ipynb  exp2.ipynb  explorative_analysis.ipynb  main.ipynb  recsys_test.ipynb  response_function.ipynb  restaurants_main.ipynb  synthetic_generators_comparison.ipynb
notebooks/.ipynb_checkpoints/: recsys_test-checkpoint.ipynb
notebooks/books/: compare_on_real_books_data.ipynb  preprocess_books_dataset.ipynb
notebooks/books/cache/: evalution_result.csv
notebooks/movielens/: 2_chunks_experiment.ipynb  autorec_exeperiments.ipynb  deepfm_experiments.ipynb  evaluate_models_on_deepfm_and_real_dataset.ipynb  evaluate_models_on_deepfm_and_synthetic_dataset-2.ipynb  evaluate_models_on_deepfm_and_synthetic_dataset.ipynb  find_best_chunks.ipynb  knn_experements.ipynb  preprocess_rating.ipynb  preprocessing.ipynb  sdv_generators_evaluation.ipynb  sdv_generators_performance.ipynb  svd_experiments.ipynb  synthetic_generators_comparison.ipynb
notebooks/restaurants/: compare_on_real_restaurants_dataset.ipynb  main-refactored.ipynb  main.ipynb
other/: similarity.ipynb  syn_data_generation.ipynb
(+3 files in other folders)
